removed console log
